# fcgiwrap

./: .gitignore  COPYING  Makefile  Makefile.in  README.rst  configure.ac  fcgiwrap.8  fcgiwrap.c  fcgiwrap.spec  gnosek-fcgiwrap.8
systemd/: fcgiwrap.service  fcgiwrap.socket  fcgiwrap@.service  fcgiwrap@.service.in  fcgiwrap@.socket.in
